adding song display and search page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,7 @@
 <ion-menu [content]="content">
 
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Pages</ion-title>
-    </ion-toolbar>
+      <img alt="logo" class="main-logo" src="../assets/img/bharathi1.jpg">
   </ion-header>
 
   <ion-content>
