--- a/src/pages/item-details/item-details.scss
+++ b/src/pages/item-details/item-details.scss
@@ -1,3 +1,22 @@
 page-item-details {
-
+    .accordion {
+        ion-card-header {
+            font-weight: bold;
+        }
+        ion-list {
+            &.open {
+                max-height: 1000px;
+                /* approximate max height */
+                transition-property: all;
+                transition-duration: 1s;
+                transition-timing-function: ease-in;
+            }
+            &.close {
+                transition-property: all;
+                transition-duration: 1s;
+                transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+                max-height: 0;
+            }
+        }
+    }
 }
