--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,15 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #009688,
+  secondary:  #D50000,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #E8EAF6,
+  dark:       #222,
+  mainHeading: #009688,
+  backgroundNorml: #ffffff,
+  cardBackground: #4DB6AC,
+  cardhighlight: #26A69A  
 );
 
 
