--- a/src/pages/item-details/item-details.scss
+++ b/src/pages/item-details/item-details.scss
@@ -1,22 +1,61 @@
 page-item-details {
     .accordion {
-        ion-card-header {
-            font-weight: bold;
+        ion-card {
+            border-radius: 5px;
+            ion-card-header {
+                font-weight: bold;
+                background-color: #19b8a4;
+                color: white;
+                padding: 8px;
+                font-size: 1.4rem;
+                .accordionHeading {
+                    float: left;
+                    padding-left: 5px;
+                    line-height: 1;
+                }
+            }
+            ion-list {
+                &.open {
+                    max-height: 10000px;
+                    /* approximate max height */
+                    transition-property: all;
+                    transition-duration: 0.5s;
+                    transition-timing-function: ease-in;
+                }
+                &.close {
+                    transition-property: all;
+                    transition-duration: 0.5s;
+                    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+                    max-height: 0;
+                }
+                ion-item-sliding {
+                    border-bottom: 1px solid #f6f8ff;
+                    color: $secondaryHeading;
+                    font-size: 1.4rem;
+                    button {
+                        font-size: 1.4rem;
+                    }
+                }
+            }
+            ion-icon {
+                font-weight: bold;
+                transition: transform 0.5s ease-out;
+                margin-right: 10px;
+                &.ion-md-add {
+                    transform: rotate(180deg);
+                }
+                &.ion-md-remove {
+                    transform: rotate(0deg);
+                }
+            }
+            ion-icon[item-start] {
+                margin-right: 8px;
+            }
         }
-        ion-list {
-            &.open {
-                max-height: 1000px;
-                /* approximate max height */
-                transition-property: all;
-                transition-duration: 1s;
-                transition-timing-function: ease-in;
-            }
-            &.close {
-                transition-property: all;
-                transition-duration: 1s;
-                transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-                max-height: 0;
-            }
+    }
+    .favorite {
+        &.active {
+            color: #f53d3d;
         }
     }
 }
