--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -1,8 +1,5 @@
 page-hello-ionic {
     .card-background-page {
-        .scroll-content {
-            margin-top: 54px!important;
-        }
         ion-card {
             position: relative;
             text-align: center;
@@ -12,56 +9,81 @@ page-hello-ionic {
             }
             ion-card-content {
                 line-height: 1;
+                padding: 13px 8px;
             }
             &.thumbnail {
-                width: 46%;
-                display: inline-block;
+                width: 44%;
                 box-sizing: content-box;
-                min-height: 125px;
-                margin: 7px;
+                height: 30%;
+                float: left;
+                min-height: 120px;
+            }
+            &.thumbnail:nth-child(odd) {
+                margin: 4% 0 0 4%;
+            }
+            &.thumbnail:nth-child(even) {
+                margin: 4% 4% 0 4%;
             }
             &.thumbnail:nth-child(1) {
-                background-color: #D32F2F;
-                background-image: url(../../assets/img/red_pattern.png);
+                background-color: #d9444a; //background-image: url(../../assets/img/red_pattern.png);
             }
             &.thumbnail:nth-child(2) {
-                border-color: #7B1FA2;
-                background-color: #7B1FA2;
+                border-color: #FF9800;
+                background-color: #ecc021; //background-image: url(../../assets/img/purple_pattern.png);
             }
             &.thumbnail:nth-child(3) {
-                border-color: #388E3C;
-                background-color: #388E3C;
+                border-color: #C2185B;
+                background-color: #5cae42; //background-image: url(../../assets/img/green_pattern.png);
             }
             &.thumbnail:nth-child(4) {
-                border-color: #FF9800;
-                background-color: #FF9800;
+                border-color: #03A9F4;
+                background-color: #387bc1; //background-image: url(../../assets/img/yellow_pattern.png);
             }
             &.thumbnail:nth-child(5) {
-                border-color: #03A9F4;
-                background-color: #03A9F4;
+                border-color: #7B1FA2;
+                background-color: #83489a; //background-image: url(../../assets/img/blue_pattern.png);
             }
             &.thumbnail:nth-child(6) {
-                border-color: #C2185B;
-                background-color: #C2185B;
+                border-color: #388E3C;
+                margin-bottom: 4%;
+                background-color: #afbb3d; //background-image: url(../../assets/img/pink_pattern.png);
             }
         }
         .card-title {
-            font-size: 1.0em;
+            font-size: 1em;
             width: 100%;
             font-weight: bold;
             color: #fff;
-            padding-top: 10px;
+            padding-top: 5px;
+            line-height: 1.2;
+            white-space: unset;
         }
         .card-subtitle {
-            font-size: 1.0em;
+            font-size: 0.9em;
             width: 100%;
             color: #fff;
             padding-top: 10px;
             position: absolute;
-            bottom: 15px;
+            bottom: 15%;
             left: 0;
             ion-icon {
                 padding-right: 5px;
+            }
+        }
+        .card-numbers {
+            font-size: 2.0em;
+            width: 100%;
+            color: #fff;
+            padding-top: 10px;
+            position: absolute;
+            bottom: 30%;
+            left: 0;
+            ion-icon {
+                padding-right: 5px;
+            }
+            span {
+                top: -3px;
+                position: relative;
             }
         }
     }
