style issues and swipe on list page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -91,9 +91,9 @@ button {
 .left-menu {
     .main-logo {
         background-image: url(../assets/img/tamil_carving.jpg);
-        height: 175px;
+        height: 178px;
         width: 100%;
-        background-size: contain;
+        background-size: cover;
         display: inline-block;
         filter: blur(0.2px);
         .overlay {
