--- a/src/pages/favourites/favourites.scss
+++ b/src/pages/favourites/favourites.scss
@@ -6,18 +6,34 @@ favourites-page {
             ion-icon {
                 font-size: 10em;
                 text-align: center;
-                color: #dbe2e1;
+                color: $mainHeading;
             }
             .message {
                 $color: $secondaryHeading;
                 font-weight: bold;
             }
         }
-        
         ion-card {
             border-radius: 10px;
             .item {
                 font-size: $bodyFontSize;
+                .item-inner {
+                    border-bottom: 1px solid #dedede !important;
+                }
+            }
+            ion-list {
+                ion-item-sliding {
+                    max-height: 50px;
+                    overflow: hidden;
+                    opacity: 1;
+                    &.remove {
+                        opacity: 0;
+                        max-height: 0;
+                        transition-property: all;
+                        transition-duration: 700ms;
+                        transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+                    }
+                }
             }
         }
     }
