--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -85,32 +85,39 @@ ion-title {
 }
 
 .left-menu {
-    .main-logo {
-        background-image: url(../assets/img/tamil_carving.jpg);
-        height: 178px;
-        width: 100%;
-        background-size: cover;
-        display: inline-block;
-        filter: blur(0.2px);
-        .overlay {
-            width: 100%;
-            height: 100%;
-            background-color: #000000;
-            opacity: 0.5;
+    ion-header {
+        &.header-md {
+            &::after {
+                height: 0px;
+            }
         }
-    }
-    .bharathi-logo {
-        background-image: url(../assets/img/icon.jpg);
-        height: 90px;
-        background-size: contain;
-        border-radius: 45px;
-        display: inline-block;
-        border: 3px solid #9E9E9E;
-        position: absolute;
-        width: 90px;
-        top: 38px;
-        left: 33%;
-        background-position: center top;
+        .main-logo {
+            background-image: url(../assets/img/tamil_carving.jpg);
+            height: 178px;
+            width: 100%;
+            background-size: cover;
+            display: inline-block;
+            filter: blur(1px);
+            .overlay {
+                width: 100%;
+                height: 100%;
+                background-color: #000000;
+                opacity: 0.5;
+            }
+        }
+        .bharathi-logo {
+            background-image: url(../assets/img/icon.jpg);
+            height: 90px;
+            background-size: contain;
+            border-radius: 45px;
+            display: inline-block;
+            border: 3px solid #9E9E9E;
+            position: absolute;
+            width: 90px;
+            top: 38px;
+            left: 33%;
+            background-position: center top;
+        }
     }
     ion-content.content-ios,
     ion-content.content-md {
