--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,7 +21,7 @@ $app-direction: ltr;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
-$colors: ( primary: #00C853, //#EC407A,
+$colors: ( primary: #f66939, //#EC407A,
 secondary: #19b8a4, danger: #f53d3d, light: #E8EAF6, dark: #222, mainHeading: #009688, backgroundNorml: #ffffff, cardBackground: #4DB6AC, cardhighlight: #26A69A);
 $secondaryHeading: #455a64;
 $bodyFontSize: 1.4rem;
