--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -3,11 +3,28 @@ about-page {
         padding: 0 15px 15px 15px;
         .profile {
             text-align: center;
+            background-color: black;
+            margin: 0 -15px;
+            position: relative;
+            background: radial-gradient(#909090, #0a0a0a);
             img {
                 max-height: 250px;
             }
             h4 {
                 font-weight: bold;
+            }
+            h3 {
+                margin: 0;
+                position: absolute;
+                height: 40px;
+                line-height: 40px;
+                bottom: 0;
+                width: 100%;
+                text-align: center;
+                background-color: rgba(52, 52, 52, 0.8);
+                color: white;
+                font-weight: bold;
+                font-size: 1.2em;
             }
         }
     }
