--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,6 +3,7 @@ $mainHeading: #19b8a4;
 $backgroundNorml: #f6f8ff;
 $cardBackground: #4DB6AC;
 $cardhighlight: #26A69A;
+$primary: #f66939;
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
