--- a/src/pages/favourites/favourites.scss
+++ b/src/pages/favourites/favourites.scss
@@ -1,12 +1,19 @@
 favourites-page {
     ion-header {
-        .deleteIcon {
-            font-size: 2.4rem;
-        }
-        .cancelIcon {
-            font-size: 2.4rem;
-            ion-icon {
-                transform: rotate(45deg);
+        ion-buttons {
+            &.icons {
+                border: 1px solid #009688;
+                border-radius: 5px;
+                width: 40px;
+                text-align: center!important;
+                button {
+                    font-size: 2.4rem;
+                }
+                .cancelIcon {
+                    ion-icon {
+                        transform: rotate(45deg);
+                    }
+                }
             }
         }
     }
