--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -1,93 +1,101 @@
 page-hello-ionic {
     .card-background-page {
-        ion-card {
-            position: relative;
-            text-align: center;
-            img {
-                height: 100%;
-                display: inline-block;
-            }
-            ion-card-content {
-                line-height: 1;
-                padding: 13px 8px;
-            }
-            &.thumbnail {
-                width: 44%;
-                box-sizing: content-box;
-                height: 30%;
-                float: left;
-                min-height: 120px;
-            }
-            &.thumbnail:nth-child(odd) {
-                margin: 4% 0 0 4%;
-            }
-            &.thumbnail:nth-child(even) {
-                margin: 4% 4% 0 4%;
-            }
-            &.thumbnail:nth-child(1) {
-                background-color: #d9444a; //background-image: url(../../assets/img/red_pattern.png);
-            }
-            &.thumbnail:nth-child(2) {
-                background-color: #ecc021; //background-image: url(../../assets/img/purple_pattern.png);
-            }
-            &.thumbnail:nth-child(3) {
-                background-color: #5cae42; //background-image: url(../../assets/img/green_pattern.png);
-            }
-            &.thumbnail:nth-child(4) {
-                background-color: #387bc1; //background-image: url(../../assets/img/yellow_pattern.png);
-            }
-            &.thumbnail:nth-child(5) {
-                background-color: #83489a; //background-image: url(../../assets/img/blue_pattern.png);
-            }
-            &.thumbnail:nth-child(6) {
-                margin-bottom: 4%;
-                background-color: #afbb3d; //background-image: url(../../assets/img/pink_pattern.png);
-            }
-        }
-        .card-title {
-            font-size: 1em;
-            width: 100%;
-            font-weight: bold;
-            color: #fff;
-            padding-top: 5px;
-            line-height: 1.2;
-            white-space: unset;
-            @include bp(tablet-min) {
-                font-size: 1.5em;
-            }
-        }
-        .card-subtitle {
-            font-size: 0.9em;
-            width: 100%;
-            color: #fff;
-            padding-top: 10px;
-            position: absolute;
-            bottom: 15%;
-            left: 0;
-            @include bp(tablet-min) {
-                font-size: 1.4em;
-            }
-            ion-icon {
-                padding-right: 5px;
-            }
-        }
-        .card-numbers {
-            font-size: 2.0em;
-            width: 100%;
-            color: #fff;
-            padding-top: 10px;
-            position: absolute;
-            bottom: 30%;
-            left: 0;
-            @include bp(tablet-min) {
-                font-size: 3.0em;
-            }
-            ion-icon {
-                padding-right: 5px;
-            }
-            span {
-                top: -3px;
+        .outerDiv {
+            height: 100%;
+            ion-card,
+            button {
                 position: relative;
+                text-align: center;
+                .button-inner {
+                    display: block;
+                }
+                img {
+                    height: 100%;
+                    display: inline-block;
+                }
+                ion-card-content {
+                    line-height: 1;
+                    padding: 13px 8px;
+                }
+                &.thumbnail {
+                    width: 44%;
+                    box-sizing: border-box;
+                    height: 30%;
+                    float: left;
+                    min-height: 120px;
+                    padding: 13px 10px;
+                }
+                &.thumbnail:nth-child(odd) {
+                    margin: 4% 0 0 4%;
+                }
+                &.thumbnail:nth-child(even) {
+                    margin: 4% 4% 0 4%;
+                }
+                &.thumbnail:nth-child(1) {
+                    background-color: #d9444a; //background-image: url(../../assets/img/red_pattern.png);
+                }
+                &.thumbnail:nth-child(2) {
+                    background-color: #ecc021; //background-image: url(../../assets/img/purple_pattern.png);
+                }
+                &.thumbnail:nth-child(3) {
+                    background-color: #5cae42; //background-image: url(../../assets/img/green_pattern.png);
+                }
+                &.thumbnail:nth-child(4) {
+                    background-color: #387bc1; //background-image: url(../../assets/img/yellow_pattern.png);
+                }
+                &.thumbnail:nth-child(5) {
+                    background-color: #83489a; //background-image: url(../../assets/img/blue_pattern.png);
+                }
+                &.thumbnail:nth-child(6) {
+                    margin-bottom: 4%;
+                    background-color: #afbb3d; //background-image: url(../../assets/img/pink_pattern.png);
+                }
+            }
+            .card-title {
+                font-size: 1em;
+                width: 100%;
+                font-weight: bold;
+                color: #fff;
+                padding-top: 5px;
+                line-height: 1.2;
+                white-space: normal;
+                @include bp(tablet-min) {
+                    font-size: 1.5em;
+                }
+            }
+            .card-subtitle {
+                font-size: 0.9em;
+                width: 100%;
+                color: #fff;
+                padding-top: 10px;
+                position: absolute;
+                bottom: 15%;
+                left: 0;
+                @include bp(tablet-min) {
+                    font-size: 1.4em;
+                }
+                ion-icon {
+                    padding-right: 5px;
+                }
+            }
+            .card-numbers {
+                font-size: 2em;
+                width: 100%;
+                color: #fff;
+                padding-top: 10px;
+                position: absolute;
+                bottom: 30%;
+                left: 0;
+                @include bp(tablet-min) {
+                    font-size: 3.0em;
+                }
+                ion-icon {
+                    padding-right: 5px;
+                }
+                span {
+                    top: -3px;
+                    position: relative;
+                }
             }
         }
     }
